tests/rules/samples/check_preprocessor_indent.c
#  define HOJEEHDIA 1
#ifdef HOJEEHDIA
#define BADIDENT 2
#if 1
# error "Ta errado essa indentação aqui hein"
#   endif
#		endif

# define bad 1
// #define toto f(x)
// #define A AB+AB

#define PRINTF printf // ALIAS

#define X 2 /*
o X é 2, logo 2 não é X
*/

#define NEVER 2
#if 1
# if 1
#  if 1
#  endif
# endif
#elif HOJEEHDIA
# 			    	 	 		
#endif

				#define J 2
	#define NATHAN "lINDO"
	#define PANSUDINHO
  #define barrigudinho				PANSUDINHO

#include<stdio.h>
#include	<stdlib.h>
#include  "stdio.h"
#include  	 "stdlib.h"
#include 	"stdio.h"
#include"stdlib.h"
#include "sys/type.h"
#include <sys/type.h>
#include <   sys_ali   /  aqui _123_2    .h>

#include <stdint.h>  // uint32_t
#include <stdlib.h>  /* malloc */ 		
#include <stdio.h>   /*
printf
*/ // é o negócio n ta legal não

#import	<stdio.h>
#import <stdio.h>  // pipoca é bem gostoso

#define X